<resources>
    <string name="app_name">Toast</string>
    <string name="visitor_search_hint">Search</string>
    <string name="btAccept">Accept</string>
    <string name="btDeny">Deny</string>
    <string name="tvApproveTitle">Approve this request?</string>
    <string name="btBook">Request meal</string>
    <string name="visitor_tv_greeting">Hello, </string>
    <string name="browse_nearby">Browse events nearby</string>
    <string name="current_location_title">Use my current location</string>
    <string name="previous_location_title">Pick a previous location</string>
    <string name="previous_location_text">No previous meals yet!</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">arnauds-squadron</string>
    <string name="service_not_available">No geocoder available. Could not convert current location to address.</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="address_found">Found address successfully!</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="event_creation_create_event_text">Create Event</string>
    <string name="event_creation_date_not_selected">Date not set</string>
    <string name="event_creation_tags_hint">Cuisine</string>
    <string name="event_creation_review_title">Confirm Your Event</string>
    <string name="event_creation_start_new_event">New event</string>
    <string name="event_creation_start_title">Set Up Your Event</string>
    <string name="event_creation_time_not_selected">Time not set</string>
    <string name="detailview_event_title">Event Title</string>
    <string name="detailview_cuisine_name">Cuisine</string>
    <string name="detailview_distance">Distance</string>
    <string name="detailview_bt_request">RSVP</string>
    <string name="detailview_host_bio_title">Who\'s hosting</string>
    <string name="detailview_host_name">Host name</string>
    <string name="detailview_description_title">About</string>
    <string name="detailview_description">Bio content</string>
    <string name="detailview_book_prompt">Like what you see?</string>
    <string name="detailview_location_title">Where it\'s at</string>
    <string name="detailview_location_name">Restaurant Name</string>
    <string name="detailview_address">Address</string>
    <string name="detailview_phone">Phone</string>
    <string name="detailview_url">URL</string>
    <string name="search_results_title">Results</string>
    <string name="search_again">Search again</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="no_bio">This user hasn\'t set a bio</string>
    <string name="num_ratings">numRatings</string>
    <string name="message_profile_image">my profile image</string>
    <string name="message_other_profile_image">profile image</string>
    <string name="messenger_message_hint">Type a message</string>
    <string name="event_creation_title_hint">Title</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="max_guests_label">Max Guests</string>
    <string name="over_21_label">21+</string>
    <string name="calendar_icon_text">Calendar</string>
    <string name="clock_icon_text">Clock</string>
    <string name="event_creation_copy_event">Copy event</string>
    <string name="date_choice">Which dates</string>
    <string name="your_recent_events_label">Your Recent Events</string>
    <string name="chat_image">Chat Image</string>
    <string name="chats">Chats</string>
    <string name="skip">Skip</string>
    <string name="event_image">Event Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="find_an_event">Find an event</string>
    <string name="create_an_event">Create an event</string>
    <string name="no_events_scheduled">No events scheduled</string>
    <string name="walkthrough_0">Welcome to Toast</string>
    <string name="walkthrough_1">Browse</string>
    <string name="walkthrough_2">Dine</string>
    <string name="walkthrough_3">Cheers\!</string>
    <string name="toast">Toast</string>
    <string name="signup_message">Don\'t have an account? Sign up.</string>
    <string name="login_message">Already have an account? Log in.</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="set">Set</string>
    <string name="chat_button">Chat</string>
    <string name="cancel">Cancel</string>
    <string name="search_nearby">Search nearby</string>
    <string name="no_recent_events">No recent events</string>
    <string name="no_chats">No chats</string>
    <!--latitude/longitude tags-->
    <item name="latitude" type="id" />
    <item name="longitude" type="id" />
    <!--business/event tags for visitor event detail view-->
    <item name="business" type="id" />
    <item name="event" type="id" />
    <string name="chat">Chat</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="could_not_find_any_restaurants">Could not find any restaurants</string>
    <string name="log_in">Log In</string>
    <string name="agenda">Agenda</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">save</string>
    <string name="log_out">Log Out</string>
    <string name="location">location</string>
</resources>
