<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailsTest">

    <TextView
    android:id="@+id/tvEventTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/detailview_event_title"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/tvCuisine"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btRequest"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="150dp"
    android:layout_marginLeft="150dp"
    android:layout_marginEnd="150dp"
    android:layout_marginRight="150dp"
    android:layout_marginBottom="32dp"
    android:text="@string/detailview_bt_request"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <TextView
    android:id="@+id/tvCuisine"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/detailview_cuisine_name"
    app:layout_constraintEnd_toStartOf="@+id/tvDistance"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/tvDistance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="24dp"
    android:layout_marginRight="24dp"
    android:text="@string/detailview_distance"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tvBookPrompt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="10dp"
    android:text="@string/detailview_book_prompt"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/btRequest"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvEventDetails"
        android:layout_width="395dp"
        android:layout_height="560dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvBookPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEventTitle" />

</android.support.constraint.ConstraintLayout>